# pointcloud_registration

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake/: libnabo.cmake  libpointmatcher.cmake  yaml-cpp.cmake
data/: bunny.txt  max_planck_face2.ply
scripts/: context.py  example_mesh_approximation.py  icp_libigl.py  libigl_icp.py  libigl_rigid_algnment.py  non_rigid_alignment_libpointmatcher.py  open3d_icp.py  open3d_registration_fgr.py  open3d_registration_ransac.py  open3d_utils.py  rigid_algnment_libigl.py
src/cpp/: icp_bindings.cpp  icp_libigl.cpp  icp_libigl.h  non_rigid_alignment.cpp  non_rigid_alignment.h
src/meshapprox/: __init__.py  approximate_mesh.py
test/: context.py  test_approximate_mesh.py  test_chamfer_distance.py
utility/: __init__.py  chamfer_distance.py
